Change use tcp-ping for game server

--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -7,6 +7,7 @@ sites:
   - name: deml.io
     url: https://deml.io
   - name: Game Server
+    check: "tcp-ping"
     url: $GAME_SERVER_IP
   - name: Client_01
     url: $CLIENT_01
